[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "endec"
version = "0.3.7"
description = "Web-compatible encoding and decoding library"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thitat Auareesuksakul", email = "flux@thitat.net" }]
keywords = ["encoding_rs", "web", "codec"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/fluxth/endec"
Source = "https://github.com/fluxth/endec"
Changelog = "https://github.com/fluxth/endec/releases"

[tool.maturin]
module-name = "endec._endec"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
